<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/current_block_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/current_block_header"/>

    <TextView
        android:id="@+id/block_version"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/current_block_details"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/version"/>

    <TextView
        android:id="@+id/block_version_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/current_block_details"
        app:layout_constraintStart_toEndOf="@id/block_version"
        tools:text="2"/>

    <TextView
        android:id="@+id/block_timestamp"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/block_version_value"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/timestamp"/>

    <TextView
        android:id="@+id/block_timestamp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/block_version_value"
        app:layout_constraintStart_toEndOf="@id/block_version"
        tools:text="23423424"/>

    <TextView
        android:id="@+id/block_prevhash"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/block_timestamp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/previous_hash"/>

    <TextView
        android:id="@+id/block_prevhash_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/block_timestamp_value"
        app:layout_constraintStart_toEndOf="@id/block_version"
        tools:text="38573857395394583953857385739539458395"/>

    <TextView
        android:id="@+id/block_merkel_root"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/block_prevhash"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/merkel_root"/>

    <TextView
        android:id="@+id/block_merkel_root_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:padding="5dp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@+id/block_prevhash_value"
        app:layout_constraintStart_toEndOf="@id/block_version"
        tools:text="4583945839458395"/>

    <TextView
        android:id="@+id/block_difficulty"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/block_merkel_root"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/difficulty"/>

    <TextView
        android:id="@+id/block_difficulty_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/block_merkel_root_value"
        app:layout_constraintStart_toEndOf="@id/block_version"
        tools:text="10"/>

    <TextView
        android:id="@+id/block_nonce"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/block_difficulty"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/nonce"/>

    <TextView
        android:id="@+id/block_nonce_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/block_difficulty_value"
        app:layout_constraintStart_toEndOf="@id/block_version"
        tools:text="3487238"/>

</android.support.constraint.ConstraintLayout>